# petsard

./: .coverage.JustyndeMacBook-Pro.local.18624.XXMDWykx  .dockerignore  .gitignore  20231121_衛福部黑客松：自動敘述性統計視覺化工具.ipynb  20231122_衛福部黑客松：自動敘述性統計視覺化工具.ipynb  CHANGELOG.md  DevTest.ipynb  Dockerfile  Dockerfile-archive  Dockerfile.dev  HISTORY.md  Issue550.ipynb  Justyn.ipynb  Justyn_DevTest.ipynb  Justyn_anonymeter.ipynb  Justyn_anonymeter_20231128_1301.csv  Justyn_anonymeter_20231129_1130.csv  LICENSE  PET_raw_data.py  README.md  [Adt Income] adult_2023-11-01_16-13-17_Asia_Taipei.txt  [Census] adult_2023-11-01_13-13-48_Asia_Taipei.txt  [NHANES] B_2023-11-01_13-13-49_Asia_Taipei.txt  [Old] Justyn_2.ipynb  [Old] Justyn_DevTest.ipynb  [Old] Justyn_anonymeter.ipynb  [Retail] Online Retail_2023-11-01_13-13-49_Asia_Taipei.txt  [Retail] Online Retail_20231102_125246_Asia_Taipei.txt  [UK-US PF] va_household_ver_1_9_instance_2_20231102_125351_Asia_Taipei.txt  [UK-US PF] va_person_ver_1_9_instance_2_2023-11-01_13-14-42_Asia_Taipei.txt  [UK-US PF] va_person_ver_1_9_instance_2_20231102_125429_Asia_Taipei.txt  compose.yml  data.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  functional_design.md  hugo.yaml  log.txt  petsard_installer_plan.md  (+3 more)
.ai/: README.md
.ai/functional_design/: metadater.md  reporter.md
.ai/scripts/: development-assistant.py
.github/: dependabot.yml
.github/workflows/: anchore-syft.yml  copy-folder.yml  docker-publish.yml  image-publish.yml  image-test.yml  jekyll-deployment.yml  jekyll-gh-pages.yml  jekyll.yml  osv-scan.yml  osv-scanner.yml  pages.yaml  python-app.yml  semantic-release.yml  syft.yml  test-suite.yml  trivy-license-scan.yml  trivy-sbom-gen.yml  trivy-vuln-scan.yml
PETsARD/: Config.py  Error.py  Executor.py  Metadata.py  __init__.py  config.py  error.py  executor.py  operator.py  requirements.txt
PETsARD/Evaluator/: Evaluator.py  EvaluatorFactory.py  __init__.py
PETsARD/HyperProcessor/: HyperProcessor.py  Mediator.py  __init__.py
PETsARD/Loader/: Benchmarker.py  Loader.py  LoaderFactory.py  LoaderPandas.py  Loader_csv_pandas.py  Loader_excel_pandas.py  Loader_pandas.py  (+5 more)
PETs_Experiment/: Executor.py  __init__.py  tutorial.md
PETs_Tool/: PETs_Desc_Reporter.py  PETs_Describer.py  PETs_Loader.py  PETs_SD_SDV.py  PETs_load_data_old.py  PETs_util.py  Untitled-1.ipynb  __init__.py
content/: _index.md  _index.zh-tw.md
data_desc/: [Adt Income] adult_20231102_125245_Asia_Taipei.txt  [Adt Income]_20231115_165214_Asia_Taipei.txt  [Adt Income]_20231115_165315_Asia_Taipei.txt  [Census] adult_20231102_125246_Asia_Taipei.txt  [NHANES] B_20231102_125246_Asia_Taipei.txt
data_dpsd/: [Adt Income]_[SDV]_[CTGAN]_20231106_093702_Asia_Taipei_10000.csv  [Adt Income]_[SDV]_[CoupulaGAN]_20231106_113038_Asia_Taipei_10000.csv  [Adt Income]_[SDV]_[GaussianCoupula]_20231106_093622_Asia_Taipei_10000.csv  [Adt Income]_[SDV]_[TVAE]_20231106_105252_Asia_Taipei_10000.csv  [Census]_[SDV]_[CTGAN]_20231106_124316_Asia_Taipei_10000.csv  [Census]_[SDV]_[CoupulaGAN]_20231106_134825_Asia_Taipei_10000.csv  [Census]_[SDV]_[GaussianCoupula]_20231106_124246_Asia_Taipei_10000.csv  [Census]_[SDV]_[TVAE]_20231106_132856_Asia_Taipei_10000.csv  [NHANES]_[SDV]_[CTGAN]_20231106_143352_Asia_Taipei_10000.csv  [NHANES]_[SDV]_[CoupulaGAN]_20231106_143755_Asia_Taipei_10000.csv  [NHANES]_[SDV]_[GaussianCoupula]_20231106_143338_Asia_Taipei_10000.csv  [NHANES]_[SDV]_[TVAE]_20231106_143656_Asia_Taipei_10000.csv  [Retail]_[SDV]_[CoupulaGAN]_20231106_231040_Asia_Taipei_10000.csv  [Retail]_[SDV]_[GaussianCoupula]_20231106_144135_Asia_Taipei_10000.csv  [Retail]_[SDV]_[TVAE]_20231106_165107_Asia_Taipei_10000.csv  [UK-US PF] Household_[SDV]_[GaussianCoupula]_20231110_030119_Asia_Taipei_10000.csv
demo/: 20240212.ipynb  AlexTest.ipynb  Basic Usage Case 1.ipynb  Benchmark_dataset.ipynb  Demo_SDMetrics.ipynb  Demo_YData.ipynb  Demo_smartnoise.ipynb  DevTest.ipynb  DevTest_Eval.ipynb  DevTest_Exec_Yaml.ipynb  DevTest_Exec_Yaml.yaml  DevTest_ITRI.ipynb  DevTest_Justyn.ipynb  DevTest_Loader.ipynb  DevTest_Precision.ipynb  DevTest_SageMaker.ipynb  README.md  User Story A - Privacy Enhancing Data Generation.ipynb  User Story A.ipynb  User Story B - Privacy Enhancing Data Generation and Evaluation.ipynb  User Story B.ipynb  User Story C - Privacy Enhancing Data Evaluation.ipynb  User Story C.ipynb  User Story D - Research on Benchmark datasets.ipynb  User Story D.ipynb  User Story README.md  UserStory.ipynb  UserStory_01.yaml  UserStory_01[Report]_demo_[columnwise].csv  UserStory_01[Report]_demo_[global].csv  UserStory_01[Report]_demo_[pairwise].csv  UserStory_02.yaml  UserStory_03.yaml  UserStory_04.yaml  UserStory_04[Report]_demo_[global].csv  UserStory_05.py  UserStory_05.yaml  UserStory_05[Report]_custom_[columnwise].csv  UserStory_05[Report]_custom_[global].csv  UserStory_05[Report]_custom_[pairwise].csv  (+38 more)
dev/: test_config.yaml
doc_site/: hugo.yaml
docs/: 2024-01-03-Evaluator - Anonymeter.md  2024-01-05-Encoder.md  2024-01-05-Missingist.md  2024-01-05-Outlierist.md  2024-01-05-Processor.md  2024-01-05-Scaler.md  2024-01-24-Benchmark datasets.md  Gemfile  README.md  Template.md  _config.yml
model_dpsd/: [Adt Income]_[SDV]_[GaussianCoupula]_20231106_093205_Asia_Taipei.pkl
petsard/: __init__.py  adapter.py  config.py  config_base.py  error.py  exceptions.py  executor.py  operator.py  status.py
scripts/: dev-docker.sh  quick-docker-test.sh  test-docker.sh
tests/: README.md  conftest.py  test_adapter.py  test_config.py  test_executor.py  test_operator.py  test_petsard.py  test_status.py
yaml/: README.md  User Story A-1.yaml  User Story A-2.yaml  User Story B-1.yaml  User Story B-2.py  User Story B-2.yaml  User Story C-1.yaml  User Story C-2a.yaml  User Story C-2b.yaml  User Story C-3.yaml  User Story D-1.yaml  User Story D-2.yaml  User Story D-3.yaml  basic-usage_case-1_default-synthesis.yaml  custom-evaluation.yaml  default-synthesis-default-evaluation.yaml  default-synthesis.yaml  expt-20240314-dev.yaml  external-synthesis-default-evaluation.yaml  handling-missing-values.yaml
(+643 files in other folders)
