# ......
# The dependency management for this package is maintained using uv.
# Below are the related commands documented:
# 本套件之相依性維護使用 uv，以下紀錄相關指令：
#
# ......
# Setting up a new virtual environment
# 新設定虛擬環境
#
# 1. uv venv --python 3.10
#    - Ensure that your Python is linked to a valid Python version, and activate virtual environment.
#    - 確保您的 Python 鏈接到有效的 Python 版本，並啟動虛擬環境
# 2. uv sync
#    - update poetry.lock based on the current pyproject.toml.
#    - 根據當前的 pyproject.toml 更新 uv.lock。
#
# ......
# Set dependencies and their versions.
# 設定相依性套件與版本
#
#    General environment
#    一般環境
#     1. install libraries 安裝套件
#        - key libraries: Synethezer and Evaluator. See below for details
#        - 關鍵套件：合成器與評估器。詳情見下文
#
# ......
#
#    Development environment
#    開發環境
#
#    1. uv --project petsard add "urllib3>=2.2.2"
#    2. uv --project petsard add --group dev "tornado>=6.4.2"
#
# ......
# Output requirement.txt
# 輸出 requirement.txt
#
# 1. uv export --format requirements-txt --no-group dev  --no-editable > requirements.txt
#    - Export development environment to requirements-dev.txt.
#    - 輸出一般環境的 requirements.txt。
# 2. uv export --format requirements-txt --all-groups --no-editable > requirements-dev.txt
#    - Export development environment to requirements-dev.txt.
#    - 輸出開發環境的 requirements.txt。
#
# ......
# Dependencies version in key libraries
# 關鍵套件相依性版本
#
# 1. SDV: 1.17.4 above
#    - https://github.com/sdv-dev/SDV
#    - Latest 1.17.4 update: 2025/01/20
# 2. SDMetrics: 0.18.0 above
#    - https://github.com/sdv-dev/SDMetrics
#    - Latest 0.18.0 update: 2024/12/14
# 3. anonymeter: 1.0.0 above
#    - https://github.com/statice/anonymeter
#    - Latest 1.0.0 update: 2024/02/02
#
# ......
# Python 語義版本控制 python-semantic-release
#
# 設定 Setting:
#
# 1. 添加預設配置 Append default configuration
#    semantic-release generate-config -f toml --pyproject >> pyproject.toml
#
# ......

[project]
name = "petsard"
version = "1.0.0"
description = "Facilitates data generation algorithm and their evaluation processes"
authors = [
    { name = "alexchen830", email = "alexchen830@gmail.com" },
    { name = "matheme-justyn", email = "matheme.justyn@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10,<3.12" # anonymeter only support ">=3.10,<3.12"
dependencies = [
    "anonymeter>=1.0.0,<2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "sdmetrics>=0.18.0,<1",
    "sdv>=1.17.4,<2",
]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "python-semantic-release>=9.18.0",
    "ruff>=0.9.5",
]

[build-system]
# Specifies Hatchling as the build tool for creating distributions
requires = ["hatchling"]
# Uses Hatchling's build backend for package building
build-backend = "hatchling.build"

[tool.semantic_release]
# Format for version tags and releases
tag_format = "v{version}"
# Not allow 0.x.x version numbers for early development
major_on_zero = false
allow_zero_version = true
# Command to build distribution packages (creates dist/ directory)
build_command = "pip install build && python -m build"
# Specifies additional files to be included in releases
# Empty array means no additional assets will be included
assets = []
# Template for the automatic commit message created when version is bumped
# {version} will be replaced with the new version number
# Example: "2.1.0\n\nAutomatically generated by python-semantic-release"
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
# Specifies the commit message convention to parse
# 'angular' follows the Angular commit message format
# Example: feat(scope): message or fix(scope): message
commit_parser = "angular"
# When false, simplifies log output by disabling named masks in logging
# Affects only the development/debugging logs, not the changelog
logging_use_named_masks = false
# List of files and locations where version numbers should be updated
# Format: "file_path:version_location"
# Here it will update the version in pyproject.toml under project.version
version_variable = [
   "pyproject.toml:project.version",
]
version_source = "tag"

# Main branch release configuration
[tool.semantic_release.branches.main]
match = "main"
prerelease = false  # Do not create pre-release versions
prerelease_token = "rc"

# Changelog generation settings
[tool.semantic_release.changelog]
# Specify the path to custom templates directory
template_dir = "templates"
# Specify the changelog file to be updated
changelog_file = "CHANGELOG.md"
# Patterns of commits to exclude from changelog
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
# Template engine configurations (Jinja2 syntax)
# Start delimiter for template blocks
block_start_string = "{%"
# End delimiter for template blocks
block_end_string = "%}"
# Start delimiter for variables
variable_start_string = "{{"
# End delimiter for variables
variable_end_string = "}}"
# Start delimiter for comments
comment_start_string = "{#"
# End delimiter for comments
comment_end_string = "#}"
# Whether to remove trailing newlines in blocks
trim_blocks = false
# Whether to strip leading whitespace from lines
lstrip_blocks = false
# Sequence used for newlines
newline_sequence = "\n"
# Whether to keep trailing newlines
keep_trailing_newline = false
# Additional template extensions
extensions = []
# Enable auto-escaping of variables
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

# Commit message parsing configuration
[tool.semantic_release.commit_parser_options]
# Supported commit types
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
# feat commits trigger minor version bump (1.x.0)
minor_tags = ["feat"]
# fix and perf commits trigger patch version bump (1.1.x)
patch_tags = ["fix", "perf"]
# Default bump level if no explicit version bump is found (0: patch, 1: minor, 2: major)
default_bump_level = 0

# GitHub repository settings
[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

# Publishing configuration
[tool.semantic_release.publish]
# Files to be uploaded to GitHub releases
dist_glob_patterns = ["dist/*"]
# Enable uploading built files to GitHub releases
upload_to_vcs_release = true
